  screen to be sorted independently of the F5 Status screen.
* equipment.plist: default_activate_key and default_mode_key allows a default key
  setting for the activate and mode keys. If, when loading, a conflict with another
  key is encountered, the setting will be ignored.

Scripting:
----------
* Added world event consoleMessageReceived.
* ship.canAwardEquipment now accepts optional additional parameter of "context", 
  enabling checking of any context for the equipment item.
* Added player.ship.previousSystem property, which contains the system ID of 
  where the player as jumped from.
* shipWillExitWitchspace and shipExitedWitchspace world events now include the 
  jump cause parameter.
* Added beginGalacticHyperspaceCountdown player.ship method.
* Added global functions setExtraGuiScreenKeys and clearExtraGuiScreenKeys.
* Added registerKeys property to mission screen object, allowing additional key
  presses to be defined.
* Added planet.illuminationColor property.
* Added planet.airDensity property.
* Added Ship.setShipInfoForKey to allow for shipdata updates during the game.
* Added equipment.weaponInfo dictionary.
* Added equipment.defaultActivateKey and equipment.defaultModeKey, each are 
  read-only arrays of the default key settings for the equipment item. Set to null 
  if the values haven't been defined.

Bug Fixes:
==========
* Prevented native code exception when too many choices have been defined for a 
  mission screen that will fit on the current screen size.
* Splinters that have a defined cargo will now spawn with that, instead of 
  defaulting to minerals.
* Fixed issue where destination ID was not being passed to shipWillEnterWitchspace
  when the player is docked with another vessel.
* (Mac build) Fixed possible memory leak.
* Fixed some JS errors in oolite-populator.js and priorityAI.js.
* Fixed issue where hyperspace destination on the status screen and the witchspace